Ajout des 20 questions au formulaire

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <label for="nom">Ton prénom et nom :</label>
       <input type="text" id="nom" name="nom" required>
 
+      <!-- Bloc de 20 questions -->
+
       <div class="question">
         <p>1. Quand tu dois apprendre une leçon :</p>
         <label><input type="radio" name="q1" value="a" required> Je lis et je surligne</label><br>
@@ -29,8 +31,148 @@
       </div>
 
       <div class="question">
+        <p>3. Pour comprendre une consigne difficile :</p>
+        <label><input type="radio" name="q3" value="a" required> Je préfère qu’on me la montre</label><br>
+        <label><input type="radio" name="q3" value="b"> Je pose des questions</label><br>
+        <label><input type="radio" name="q3" value="c"> J’essaie tout seul</label><br>
+        <label><input type="radio" name="q3" value="d"> J’attends qu’on m’aide</label>
+      </div>
+
+      <div class="question">
+        <p>4. Pourquoi fais-tu tes devoirs ?</p>
+        <label><input type="radio" name="q4" value="a" required> Pour éviter les problèmes</label><br>
+        <label><input type="radio" name="q4" value="b"> Pour réussir plus tard</label><br>
+        <label><input type="radio" name="q4" value="c"> Parce que j’aime apprendre</label><br>
+        <label><input type="radio" name="q4" value="d"> Pour faire plaisir à mes proches</label>
+      </div>
+
+      <div class="question">
+        <p>5. Si tu n’étais pas obligé d’aller au collège :</p>
+        <label><input type="radio" name="q5" value="a" required> Tu continuerais à apprendre des choses par toi-même</label><br>
+        <label><input type="radio" name="q5" value="b"> Tu ferais d'autres activités qui te plaisent</label><br>
+        <label><input type="radio" name="q5" value="c"> Tu aurais besoin qu'on te pousse</label><br>
+        <label><input type="radio" name="q5" value="d"> Tu serais content de te reposer</label>
+      </div>
+
+      <div class="question">
+        <p>6. Quand tu te trompes :</p>
+        <label><input type="radio" name="q6" value="a" required> Tu abandonnes vite</label><br>
+        <label><input type="radio" name="q6" value="b"> Tu cherches pourquoi</label><br>
+        <label><input type="radio" name="q6" value="c"> Tu demandes de l’aide</label><br>
+        <label><input type="radio" name="q6" value="d"> Tu recommences autrement</label>
+      </div>
+
+      <div class="question">
+        <p>7. En classe, quand tu es bloqué :</p>
+        <label><input type="radio" name="q7" value="a" required> Tu demandes de l’aide</label><br>
+        <label><input type="radio" name="q7" value="b"> Tu attends que ça passe</label><br>
+        <label><input type="radio" name="q7" value="c"> Tu fais autre chose</label><br>
+        <label><input type="radio" name="q7" value="d"> Tu continues même si c’est dur</label>
+      </div>
+
+      <div class="question">
+        <p>8. Quand tu es stressé :</p>
+        <label><input type="radio" name="q8" value="a" required> Tu en parles</label><br>
+        <label><input type="radio" name="q8" value="b"> Tu te mets en colère</label><br>
+        <label><input type="radio" name="q8" value="c"> Tu gardes tout pour toi</label><br>
+        <label><input type="radio" name="q8" value="d"> Tu trouves un moyen de te calmer</label>
+      </div>
+
+      <div class="question">
+        <p>9. Avant un contrôle :</p>
+        <label><input type="radio" name="q9" value="a" required> Tu fais un planning</label><br>
+        <label><input type="radio" name="q9" value="b"> Tu révise au dernier moment</label><br>
+        <label><input type="radio" name="q9" value="c"> Tu ne fais rien de spécial</label><br>
+        <label><input type="radio" name="q9" value="d"> Tu travailles un peu chaque jour</label>
+      </div>
+
+      <div class="question">
+        <p>10. Tu préfères :</p>
+        <label><input type="radio" name="q10" value="a" required> Finir ce qui est difficile en premier</label><br>
+        <label><input type="radio" name="q10" value="b"> Commencer par ce que tu préfères</label><br>
+        <label><input type="radio" name="q10" value="c"> Alterner les tâches</label><br>
+        <label><input type="radio" name="q10" value="d"> Faire plusieurs choses en même temps</label>
+      </div>
+
+      <div class="question">
+        <p>11. Quelles activités te plaisent le plus ? (Tu peux cocher plusieurs réponses)</p>
+        <label><input type="checkbox" name="q11" value="a"> Réparer ou bricoler</label><br>
+        <label><input type="checkbox" name="q11" value="b"> Résoudre des énigmes</label><br>
+        <label><input type="checkbox" name="q11" value="c"> Créer, dessiner, écrire</label><br>
+        <label><input type="checkbox" name="q11" value="d"> Aider, écouter</label><br>
+        <label><input type="checkbox" name="q11" value="e"> Convaincre, diriger</label><br>
+        <label><input type="checkbox" name="q11" value="f"> Organiser, ranger</label>
+      </div>
+
+      <div class="question">
         <p>12. Si tu devais imaginer un métier que tu pourrais aimer plus tard, lequel serait-ce ?</p>
         <input type="text" name="metier">
+      </div>
+
+      <div class="question">
+        <p>13. Tu te décrirais comme :</p>
+        <label><input type="radio" name="q13" value="a" required> Créatif</label><br>
+        <label><input type="radio" name="q13" value="b"> Curieux</label><br>
+        <label><input type="radio" name="q13" value="c"> Organisé</label><br>
+        <label><input type="radio" name="q13" value="d"> Gentil</label><br>
+        <label><input type="radio" name="q13" value="e"> Courageux</label><br>
+        <label><input type="radio" name="q13" value="f"> Dynamique</label>
+      </div>
+
+      <div class="question">
+        <p>14. Quand tu travailles avec d’autres élèves, tu te sens…</p>
+        <label><input type="radio" name="q14" value="a" required> À l’aise pour proposer des idées</label><br>
+        <label><input type="radio" name="q14" value="b"> Plus à l’écoute qu’en train de parler</label><br>
+        <label><input type="radio" name="q14" value="c"> Motivé(e) par l’énergie du groupe</label><br>
+        <label><input type="radio" name="q14" value="d"> Un peu à l’écart, mais tu observes bien</label>
+      </div>
+
+      <div class="question">
+        <p>15. En ce moment, avec les adultes au collège (professeurs, CPE, etc.), tu…</p>
+        <label><input type="radio" name="q15" value="a" required> Te sens écouté(e) et compris(e)</label><br>
+        <label><input type="radio" name="q15" value="b"> Oses parler seulement si c’est nécessaire</label><br>
+        <label><input type="radio" name="q15" value="c"> Évites souvent les échanges</label><br>
+        <label><input type="radio" name="q15" value="d"> Vas facilement poser des questions ou demander de l’aide</label>
+      </div>
+
+      <div class="question">
+        <p>16. Qu’est-ce que tu as réussi ce trimestre ?</p>
+        <label><input type="radio" name="q16" value="a" required> Mes notes ont augmenté</label><br>
+        <label><input type="radio" name="q16" value="b"> J’ai fait plus d’efforts</label><br>
+        <label><input type="radio" name="q16" value="c"> Je me suis senti(e) plus à l’aise</label><br>
+        <label><input type="radio" name="q16" value="d"> J’ai découvert ce que j’aime</label>
+      </div>
+
+      <div class="question">
+        <p>17. Qu’est-ce qui a été le plus difficile pour toi ?</p>
+        <label><input type="radio" name="q17" value="a" required> Me concentrer</label><br>
+        <label><input type="radio" name="q17" value="b"> M’organiser</label><br>
+        <label><input type="radio" name="q17" value="c"> Comprendre les cours</label><br>
+        <label><input type="radio" name="q17" value="d"> Travailler régulièrement</label>
+      </div>
+
+      <div class="question">
+        <p>18. Globalement, comment as-tu vécu ce trimestre ?</p>
+        <label><input type="radio" name="q18" value="a" required> Bien</label><br>
+        <label><input type="radio" name="q18" value="b"> Moyennement</label><br>
+        <label><input type="radio" name="q18" value="c"> Difficilement</label><br>
+        <label><input type="radio" name="q18" value="d"> J’ai du mal à dire</label>
+      </div>
+
+      <div class="question">
+        <p>19. Qu’est-ce que tu voudrais améliorer au prochain trimestre ?</p>
+        <label><input type="radio" name="q19" value="a" required> Ma façon de travailler</label><br>
+        <label><input type="radio" name="q19" value="b"> Mon comportement en classe</label><br>
+        <label><input type="radio" name="q19" value="c"> Ma motivation</label><br>
+        <label><input type="radio" name="q19" value="d"> Mon organisation</label>
+      </div>
+
+      <div class="question">
+        <p>20. As-tu une idée de ce que tu aimerais faire plus tard ?</p>
+        <label><input type="radio" name="q20" value="a" required> Oui, je sais exactement</label><br>
+        <label><input type="radio" name="q20" value="b"> J’ai plusieurs idées</label><br>
+        <label><input type="radio" name="q20" value="c"> J’ai une vague idée</label><br>
+        <label><input type="radio" name="q20" value="d"> Aucune idée pour l’instant</label>
       </div>
 
       <button type="submit">Envoyer mes réponses</button>
